--- a/main.html
+++ b/main.html
@@ -18,6 +18,7 @@
             <h2 id="modalTitle">Congratulations!</h2>
             <p id="correctWord">The correct word was: </p>
             <button id="playAgain">Play Again</button>
+            <button id="cancel">Cancel</button>
             </div>
         </div>
 
